(chores) camel-core-model: use unmodifiable list when possible